--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     data-perspective="1000"
     >
 
-    <div id="bored" class="step slide" data-x="-1000" data-y="-1500" data-autoplay="10">
+    <div id="Economopolis" data-x="-1000" data-y="-1500">
         <q><b>Economopolis</b></q>
         <p>A Strategic - Economic Game</p>
     </div>
@@ -198,10 +198,6 @@
 
 <div id="impress-toolbar"></div>
 
-<div class="hint">
-    <p>Use a spacebar or arrow keys to navigate. <br/>
-       Press 'P' to launch speaker console.</p>
-</div>
 <script>
 if ("ontouchstart" in document.documentElement) { 
     document.querySelector(".hint").innerHTML = "<p>Swipe left or right to navigate</p>";
