--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     data-perspective="1000"
     >
 
-    <div id="bored" data-x="-1000" data-y="-1500" data-autoplay="10">
+    <div id="bored" class="step" data-x="-1000" data-y="-1500" data-autoplay="10">
         <q><b>Economopolis</b></q>
         <p>A Strategic - Economic Game</p>
     </div>
