--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     >
 
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500" data-autoplay="10">
-        <q><b>Economopolis</b></q>
-        <p>A Strategic - Economic Game</p>
+        <q>Aren’t you just <b>bored</b> with all those slides-based presentations?</q>
     </div>
 
     <div class="step slide" data-x="0" data-y="-1500">
