--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500" data-autoplay="10">
-        <q><b>Economopolis</b></q>
+        <q><h1>Economopolis</h1></q>
     </div>
 
     <div class="step slide" data-x="0" data-y="-1500">
