--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500" data-autoplay="10">
-        <q><h1>Economopolis</h1></q>
+        <h1>Economopolis</h1>
     </div>
 
     <div class="step slide" data-x="0" data-y="-1500">
@@ -344,11 +344,7 @@
     Just sayin' ;)
     
 -->
-<div class="hint">
-    <p>Use a spacebar or arrow keys to navigate. <br/>
-       Press 'P' to launch speaker console.</p>
-</div>
->>>>>>> parent of abe7456... index2.html created - first slide Edited.
+
 <script>
 if ("ontouchstart" in document.documentElement) { 
     document.querySelector(".hint").innerHTML = "<p>Swipe left or right to navigate</p>";
